[project]
name = "gis-to-swmm"
version = "0.1.0"
description = "Convert GIS raster and vector data into SWMM5-compatible hydrologic models"
authors = [
    { name = "Ambika Khadka", email = "ambika.khadka@iceye.com" },
    { name = "Lassi Warsta" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
pandas = "*"
rasterio = "*"
shapely = "*"
fiona = ">=1.9"
geopandas = ">=0.13"

[project.scripts]
gis-to-swmm = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
